<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lehilima.zapmoveis_teste.view.DetailImovelActivity"
    tools:showIn="@layout/activity_detail_imovel">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_attach_money_green_24dp"/>
            </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/valor_venda" />
              <TextView
                  android:id="@+id/valor"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:textSize="20sp"/>
          </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_place_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/subtipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/subtipo" />
                <TextView
                    android:id="@+id/endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_format_list_bulleted_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.3"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dorms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"

                    android:text="0" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dorms"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/suites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"

                    android:text="0" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suites"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/vagas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"

                    android:text="0" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vagas"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:text="0" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_description_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/descricao" />
                <TextView
                    android:id="@+id/observacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"

                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_characteristics_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/características" />
                <TextView
                    android:id="@+id/caracteristicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_other_characteristics_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/outras_características" />
                <TextView
                    android:id="@+id/outrascaracteristicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/background_detail_cards"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_info_green_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dtAtualizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#F57C00"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/erro_denuncia"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
